virtualbox-ose (2.2.0-dfsg-2) UNRELEASED; urgency=low

  * Remove obsolete conffiles, closes: #523778
  * Made package description clearer, closes: #524154
  * Documented guest utils download, closes: #524171

 -- Michael Meskes <meskes@debian.org>  Mon, 13 Apr 2009 20:51:26 +0200

virtualbox-ose (2.2.0-dfsg-1) unstable; urgency=low

  * New upstream version.
  * Move X11 guest utils into separate packages, closes: #520438
  * Also switched them to new X.Org X server version.
  * Move QT4 based user interface into separate package, closes: #508395
  * Added new URL for WineD3D guest additions, closes: 522672
  * Documented problem with kernel 2.6.29, closes: #518739
  * Documented missing format attribute, closes: #517454
  * Added patch to disable checking for updates, closes: #516551
  * Added patch to tell about missing vboxnetflt module, closes: #516819 
  * Bumped Standards-Version to 3.8.1

 -- Michael Meskes <meskes@debian.org>  Fri, 10 Apr 2009 11:16:49 +0200

virtualbox-ose (2.1.4-dfsg-1) unstable; urgency=high

  * New upstream version.
  * Made package use rpath where needed to deal with a security issue.
  * Set urgency to high for the very same reason.
  * Updated control file to refer to git instead of svn.
  * Made sure that init script does not fail if module loading is not enabled.
    Closes: #516242

 -- Michael Meskes <meskes@debian.org>  Wed, 18 Feb 2009 12:55:59 +0100

virtualbox-ose (2.1.2-dfsg-2) unstable; urgency=low

  * Enabled OpenGL support. Closes: #513533
  * Added patch to install WineD3D guest additions as provided by Robert Millan
    <rmh@aybabtu.com>. Closes: #514181
  * Fixed watch file yet again.
  * Recompiled to bring 2.1.2 into unstable. This changes
      - Network setup. Closes: #507169
      - File and device ownership. Closes: #509014

 -- Michael Meskes <meskes@debian.org>  Mon, 16 Feb 2009 10:49:27 +0100

virtualbox-ose (2.1.2-dfsg-1) experimental; urgency=low

  * New upstream version.
  * Enabled webservice.