@@ -8,49 +8,49 @@ Uploaders: Philipp Hug <debian@hug.cx>,
            Patrick Winnertz <winnie@debian.org>,
            Daniel Baumann <daniel@debian.org>,
            Hilko Bengen <bengen@debian.org>
-Build-Depends:	bcc,
-		bzip2,
-		chrpath,
-		debhelper (>= 5.0.44~),
-		docbook-xml,
-		docbook-xsl,
-		dpatch,
-		g++-4.2,
-		g++-4.2-multilib [amd64],
-		gcc-4.2,
-		gsoap,
-		iasl,
-		kbuild (>= 1:0.1.5svn2274),
-		libacl1-dev,
-		libasound-dev,
-		libcap2-dev,
-		libdrm-dev,
-		libgl1-mesa-dev,
-		libglu1-mesa-dev,
-		libhal-dev,
-		libidl-dev,
-		libpng12-dev,
-		libpixman-1-dev,
-		libpulse-dev,
-		libqt4-dev (>= 4.3.0),
-		libsdl1.2-dev,
-		libx11-dev,
-		libxcursor-dev,
-		libxext-dev,
-		libxi-dev,
-		libxmu-dev,
-		libxrender-dev,
-		libxslt1-dev,
-		lynx-cur,
-		po-debconf (>= 0.5.0),
-		python-dev,
-		uuid-dev,
-		x11proto-gl-dev,
-		x11proto-xf86dri-dev,
-		xserver-xorg-dev,
-		xsltproc,
-		yasm (>= 0.7.0),
-		zlib1g-dev
+Build-Depends: bcc,
+               bzip2,
+               chrpath,
+               debhelper (>= 5.0.44~),
+               docbook-xml,
+               docbook-xsl,
+               dpatch,
+               g++-4.2,
+               g++-4.2-multilib [amd64],
+               gcc-4.2,
+               gsoap,
+               iasl,
+               kbuild (>= 1:0.1.5svn2274),
+               libacl1-dev,
+               libasound-dev,
+               libcap2-dev,
+               libdrm-dev,
+               libgl1-mesa-dev,
+               libglu1-mesa-dev,
+               libhal-dev,
+               libidl-dev,
+               libpng12-dev,
+               libpixman-1-dev,
+               libpulse-dev,
+               libqt4-dev (>= 4.3.0),
+               libsdl1.2-dev,
+               libx11-dev,
+               libxcursor-dev,
+               libxext-dev,
+               libxi-dev,
+               libxmu-dev,
+               libxrender-dev,
+               libxslt1-dev,
+               lynx-cur,
+               po-debconf (>= 0.5.0),
+               python-dev,
+               uuid-dev,
+               x11proto-gl-dev,
+               x11proto-xf86dri-dev,
+               xserver-xorg-dev,
+               xsltproc,
+               yasm (>= 0.7.0),
+               zlib1g-dev
 Standards-Version: 3.8.1
 Homepage: http://www.virtualbox.org/
 Vcs-Git: git://git.debian.org/git/pkg-virtualbox/virtualbox-ose.git
@@ -60,7 +60,7 @@ Package: virtualbox-ose-qt
 Architecture: amd64 i386 lpia
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-	 virtualbox-ose
+         virtualbox-ose
 Pre-Depends: debconf | debconf-2.0
 Replaces: virtualbox-ose
 Description: x86 virtualization solution - Qt based user interface
@@ -76,11 +76,11 @@ Architecture: amd64 i386 lpia
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          adduser,
-	 python
+         python
 Pre-Depends: debconf | debconf-2.0
 Recommends: virtualbox-ose-modules,
-	    virtualbox-ose-qt,
-	    libgl1
+            virtualbox-ose-qt,
+            libgl1
 Suggests: virtualbox-ose-source
 Conflicts: virtualbox
 Provides: virtualbox
@@ -151,12 +151,11 @@ Package: virtualbox-ose-guest-x11
 Architecture: i386 amd64 lpia
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-	 virtualbox-ose-guest-utils,
+         ${xserver:Depends},
+         virtualbox-ose-guest-utils,
          pciutils
-Conflicts: xserver-xorg-core (< 2:1.6)
-Recommends: xserver-xorg-core (>= 2:1.6)
-Provides: xserver-xorg-video-5,
-          xserver-xorg-input-5
+Provides: ${xviddriver:Provides},
+          ${xinpdriver:Provides}
 Description: x86 virtualization solution - X11 guest utilities
  VirtualBox is a free x86 virtualization solution allowing a wide range
  of x86 operating systems such as Windows, DOS, BSD or Linux to run on a
@@ -171,7 +170,7 @@ Architecture: i386 amd64 lpia
 Depends: ${shlibs:Depends},
          ${misc:Depends}
 Recommends: virtualbox-ose-guest-modules,
-	    virtualbox-ose-guest-x11
+            virtualbox-ose-guest-x11
 Suggests: virtualbox-ose-guest-source
 Description: x86 virtualization solution - non-X11 guest utilities
  VirtualBox is a free x86 virtualization solution allowing a wide range
